ramped/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: netlabs-app
  namespace: netlabs-app
  labels:
    app: my-app
spec:
  host: netlabs-app.apps.ute-cluster-self-hosted.workshop.netlabs.com.uy
  to:
    kind: Service
    name: my-app
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
